<resources>
    <string name="app_name">example</string>
    <string name="action_settings">Settings</string>

    <string name="deeplink_redirect_scheme">testlib</string>
    <string name="deeplink_redirect_host">vimeonetworktestlib.com</string>
    <string name="request_staff_picks_first_page_with_gson">Request Staff Picks First Page with Gson</string>
    <string name="request_staff_picks_first_page_with_moshi">Request Staff Picks First Page with Moshi</string>
    <string name="login_with_code_grant_through_web">Login With Code Grant (Through Web)</string>
    <string name="check_current_user_account_type">Check Current User Account Type</string>
    <string name="logout">Logout</string>
    <string name="this_is_where_request_output_will_go">This is where request output will go.</string>
    <string name="request_time" formatted="false">Time - %s : %2d</string>
    <string name="gson_or_moshi_request_time_will_show_here_once_complete">Gson or Moshi request time will show here once complete.</string>
</resources>
